# src/swagger/swagger.yaml
@@ -1,4 +1,3 @@
-openapi: 3.0.0
 info:
   title: Festival Backend API
   version: 1.0.0
@@ -125,7 +124,19 @@ paths:
         '200':
           description: 주문 저장 성공
 
-    /api/drunk-orders:
+  /api/drunk-orders:
+    get:
+      summary: 외부 손님 술 주문 전체 조회
+      tags: [Orders]
+      responses:
+        '200':
+          description: 외부 손님 술 주문 목록 반환
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DrunkOrder'
     post:
       summary: 외부 손님 주문 저장
       tags: [Orders]
@@ -200,7 +211,6 @@ paths:
                     $ref: '#/components/schemas/DrunkOrder'
         '404':
           description: 주문이 존재하지 않음
-
 
   /api/orders/{timestamp}:
     delete:
@@ -346,7 +356,7 @@ components:
         zone:
           type: string
 
-        DrunkOrder:
+    DrunkOrder:
       type: object
       properties:
         id:
@@ -371,7 +381,6 @@ components:
           type: integer
         drinkingDelivered:
           type: boolean
-
 
     Item:
       type: object
